jsinterop-ts-defs-test/src/test/resources/errors/access/JsTypeInterfaceWithStaticMember.java
package errors.access;

import jsinterop.annotations.JsType;

@JsType
public interface JsTypeInterfaceWithStaticMember {

  String property = "INTERFACE STATIC PROPERTY";
}